# food_brand_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: main_agent.py
skills/ecommerce/: SKILL.md
skills/fssai-scraper/: SKILL.md
skills/main/: SKILL.md
skills/mca-company/: SKILL.md
skills/report-builder/: SKILL.md
skills/web-maps/: SKILL.md
tools/: __init__.py
tools/ecommerce/: __init__.py  ecomm_tools.py
tools/fssai/: __init__.py  fssai_tools.py
tools/maps/: __init__.py  maps_tools.py
tools/mca/: __init__.py  mca_tools.py
tools/report/: __init__.py  report_tools.py
